tests/compile-error/validator/validator/val.cpp
#pragma GCC warning "plz never do #define int long long"
ouch
